// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SimpleCard /> > renders as expected based on provided props 1`] = `
<div>
  <div
    class="tw:group/card tw:rounded-md tw:shadow-md tw:border tw:border-lm-border tw:dark:border-dm-border tw:bg-lm-primary tw:dark:bg-dm-primary"
  >
    <div
      class="tw:p-4 tw:bg-lm-primary tw:dark:bg-dm-primary tw:first:rounded-t-md tw:first:rounded-t-md tw:last:rounded-b-md"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> > renders as expected based on provided props 2`] = `
<div>
  <div
    class="tw:group/card tw:rounded-md tw:shadow-md tw:border tw:border-lm-border tw:dark:border-dm-border tw:bg-lm-primary tw:dark:bg-dm-primary"
  >
    <div
      class="tw:px-4 tw:py-3 tw:rounded-t-md tw:bg-lm-primary tw:dark:bg-dm-primary tw:border-b tw:border-lm-border tw:dark:border-dm-border"
    >
      <h5>
        Hello
      </h5>
    </div>
    <div
      class="tw:p-4 tw:bg-lm-primary tw:dark:bg-dm-primary tw:first:rounded-t-md tw:first:rounded-t-md tw:last:rounded-b-md"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> > renders as expected based on provided props 3`] = `
<div>
  <div
    class="tw:group/card tw:rounded-md tw:shadow-md tw:border tw:border-lm-border tw:dark:border-dm-border tw:bg-lm-primary tw:dark:bg-dm-primary"
  >
    <div
      class="tw:px-4 tw:py-3 tw:rounded-t-md tw:bg-lm-primary tw:dark:bg-dm-primary tw:border-b tw:border-lm-border tw:dark:border-dm-border"
    >
      <h6>
        Hello
      </h6>
    </div>
    <div
      class="tw:p-4 tw:bg-lm-primary tw:dark:bg-dm-primary tw:first:rounded-t-md tw:first:rounded-t-md tw:last:rounded-b-md"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> > renders as expected based on provided props 4`] = `
<div>
  <div
    class="tw:group/card tw:rounded-md tw:shadow-md tw:border tw:border-lm-border tw:dark:border-dm-border tw:bg-lm-primary tw:dark:bg-dm-primary"
  >
    <div
      class="tw:px-4 tw:py-3 tw:rounded-t-md tw:bg-lm-primary tw:dark:bg-dm-primary tw:border-b tw:border-lm-border tw:dark:border-dm-border"
    >
      <h5>
        Hello
      </h5>
    </div>
    <div
      class="tw:p-4 tw:bg-lm-primary tw:dark:bg-dm-primary tw:first:rounded-t-md tw:first:rounded-t-md tw:last:rounded-b-md"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> > renders as expected based on provided props 5`] = `
<div>
  <div
    class="tw:group/card tw:rounded-md tw:shadow-md tw:border tw:border-lm-border tw:dark:border-dm-border tw:bg-lm-primary tw:dark:bg-dm-primary"
  >
    <div
      class="tw:px-4 tw:py-3 tw:rounded-t-md tw:bg-lm-primary tw:dark:bg-dm-primary tw:border-b tw:border-lm-border tw:dark:border-dm-border"
    >
      <h4>
        Hello
      </h4>
    </div>
    <div
      class="tw:p-4 tw:bg-lm-primary tw:dark:bg-dm-primary tw:first:rounded-t-md tw:first:rounded-t-md tw:last:rounded-b-md"
    />
  </div>
</div>
`;
